   -  pointer to data did ignore default distance of memory model; see
      dsize.asm.
   -  option -pe: .data and .data? sections weren't merged; see pe11.asm.
   -  option -pe: if a section with initialized data (.reloc) followed a .data?
      section, space for the .data? section was reserved in the binary; see
      pe11.asm.

   Other changes:
   -  option -pe: allow imports by number; see pe10.asm.
   -  option -Zg: increased Masm compatible codegen for hll expressions; see
      hll4.asm.
   -  warning "Prologue not at PROC start" (level 3) added if the procedure's
      prologue isn't generated at the procedure's start address; see
      invoke53.asm.
   -  option -pe: default image bases changed to 0x10000000 for PE32 dlls,
      0x140000000 for PE64 exes, 0x180000000 for PE64 dlls (MS link compat).
   -  error 2058 ( "magnitude of offset exceeds 16-bit" ) changed to a warning
      ( level 3 ); see offset15.asm & offset16.asm.

   09.04.2022, v2.15:

   Bugfixes:
   -  format bin, mz, omf, pe: fixup created by direct addressing without
      symbol ( _DATA:1234h ) was still not always correct if segment was in a
      group; see lea2.asm.
   -  invoke directive: a missing left square bracket for indirect addressing
      may have been accepted if the size of the register matched the expected
      size; see invoke4.asm.
   -  using long instead of intptr_t to hold result of _findfirst() caused a
      GPF in Win64 version; see main.c.
   -  erroneously emitted error 'Magnitude of offset exceeds 16-bit' in direct
      addressing mode without symbol if segment register had no assume, segment
      was 32-bit and default word size was 16-bit only; see offset14.asm.
   -  <loadds> prologue argument was ignored if procedure had no parameters and
      locals; see loadds.asm.
   -  text macro and macro function expansion might have caused a buffer
      overflow if expanded line got too long; see expans42.asm & expans44.asm.